feat: update seedDatabase function to remove dummy data seeding and prepare for production use
docs: add CRM integration guide for booking system integration

docs: create comprehensive testing guide for HOPSVOIR application

feat: implement service worker for PWA caching and offline support

feat: add app footer component with branding information

feat: create customer URL dialog for sharing tracking links

feat: implement photo checkpoint dialog for capturing wash stage photos

feat: add PWA install prompt for mobile users

feat: create script to clear dummy data from the database

feat: add booking database integration for fetching and updating bookings

feat: implement user reset script for deleting and reseeding users

feat: create user seeding script for initial user setup

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,49 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Environment variables and sensitive data
+.env
+.env.local
+.env.development
+.env.production
+.env.*.local
+
+# Database and credentials
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Sensitive documentation (if contains credentials/secrets)
+**/schema.md
+**/database-schema.md
+**/credentials.md
+**/secrets.md
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Uploads directory (may contain sensitive user data)
+uploads/*
+!uploads/.gitkeep
+
+# Session store
+sessions/
