--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "HOPSVOIR",
+  "name": "HOPSVOIR - Carwash & Parking",
   "short_name": "HOPSVOIR",
   "description": "Smart Carwash & Parking Management with Global License Plate Recognition",
   "start_url": "/",
@@ -10,12 +10,57 @@
   "icons": [
     {
       "src": "/favicon.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "categories": ["business", "productivity"],
+  "categories": ["business", "productivity", "utilities"],
   "scope": "/",
-  "lang": "en"
+  "lang": "en",
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Scan Plate",
+      "short_name": "Scan",
+      "description": "Start scanning a license plate",
+      "url": "/scan",
+      "icons": [{ "src": "/favicon.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "My Jobs",
+      "short_name": "Jobs",
+      "description": "View your wash jobs",
+      "url": "/my-jobs",
+      "icons": [{ "src": "/favicon.png", "sizes": "96x96" }]
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
