feat: integrate Vercel serverless function with Express and add necessary configurations
- Added @vercel/node dependency to package.json
- Updated vercel.json to configure output directory and function settings
- Created .vercelignore to exclude unnecessary files from deployment
- Implemented api/index.ts to set up an Express server for handling API requests

--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,28 @@
   "version": 2,
   "buildCommand": "npm run build",
   "installCommand": "npm install --include=dev",
+  "outputDirectory": "dist/public",
+  "functions": {
+    "api/index.ts": {
+      "runtime": "@vercel/node@3.0.0",
+      "includeFiles": "server/**/*,shared/**/*,dist/**/*"
+    }
+  },
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
       "src": "/api/(.*)",
-      "dest": "/api/index"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/uploads/(.*)",
-      "dest": "/api/index"
+      "dest": "/api/index.ts"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index"
+      "dest": "/index.html"
     }
   ]
 }
-
