--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "outputDirectory": "dist/public",
   "rewrites": [
     { "source": "/api/:path*", "destination": "/api/server" },
-    { "source": "/uploads/:path*", "destination": "/api/server" }
+    { "source": "/uploads/:path*", "destination": "/api/server" },
+    { "source": "/(.*)", "destination": "/api/server" }
   ]
 }
