--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "installCommand": "npm install --include=dev",
   "outputDirectory": "dist/public",
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/server" },
-    { "source": "/uploads/:path*", "destination": "/api/server" },
-    { "source": "/(.*)", "destination": "/api/server" }
+    { "source": "/api/:path*", "destination": "/api/server.cjs" },
+    { "source": "/uploads/:path*", "destination": "/api/server.cjs" },
+    { "source": "/(.*)", "destination": "/api/server.cjs" }
   ]
 }
