--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,12 @@
   "outputDirectory": "dist/public",
   "functions": {
     "api/server.js": {
-      "includeFiles": "server/**,shared/**,drizzle.config.ts,.env"
+      "includeFiles": "server/**,shared/**,drizzle.config.ts"
     }
   },
   "rewrites": [
     { "source": "/api/:path*", "destination": "/api/server" },
-    { "source": "/uploads/:path*", "destination": "/api/server" }
+    { "source": "/uploads/:path*", "destination": "/api/server" },
+    { "source": "/:path*", "destination": "/index.html" }
   ]
 }
