--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,9 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install --include=dev",
   "outputDirectory": "dist/public",
-  "functions": {
-    "api/server.js": {
-      "includeFiles": "server/**,shared/**,drizzle.config.ts"
-    }
-  },
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/server" },
-    { "source": "/uploads/:path*", "destination": "/api/server" },
+    { "source": "/api/:path*", "destination": "/api/server.cjs" },
+    { "source": "/uploads/:path*", "destination": "/api/server.cjs" },
     { "source": "/:path*", "destination": "/index.html" }
   ]
 }
