--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "installCommand": "npm install --include=dev",
   "outputDirectory": "dist/public",
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/server.cjs" },
-    { "source": "/uploads/:path*", "destination": "/api/server.cjs" },
+    { "source": "/api/:path*", "destination": "/api/index" },
+    { "source": "/uploads/:path*", "destination": "/api/index" },
     { "source": "/:path*", "destination": "/index.html" }
   ]
 }
