--- a/package.json
+++ b/package.json
@@ -79,10 +79,13 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "sweetalert2": "^11.26.18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
+    "twilio": "^5.12.1",
     "vaul": "^1.1.2",
+    "web-push": "^3.6.7",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -102,6 +105,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/web-push": "^3.6.4",
     "@types/ws": "^8.5.13",
     "@vercel/node": "^5.5.29",
     "@vitejs/plugin-react": "^4.7.0",
