--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:reset-users": "tsx server/reset-users.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.996.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -82,6 +83,7 @@
     "sweetalert2": "^11.26.18",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^7.0.0",
     "tw-animate-css": "^1.2.5",
     "twilio": "^5.12.1",
     "vaul": "^1.1.2",
